--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,14 @@
-<h1>{{title}}</h1>
-<ul>
-    <li *ngFor='let user of users'>
-        {{user.id}} - {{user.userName}}
-    </li>
-</ul>
+<title>Teltonika</title>
+<head>
+</head>
+<div class="container">
+    <app-navbar></app-navbar>
+</div>
+<div class="container">
+    <div class="body" style="margin-top: 100px">
+        <ul>
+           <router-outlet></router-outlet>
+        </ul>
+    </div>
+    
+</div>
